# nsight-python

./: .gitignore  Contributing.md  DESCRIPTION.rst  README.md  pyproject.toml
docs/: Makefile  make.bat
docs/source/: analyze.rst  annotation.rst  conf.py  contributing.rst  extraction.rst  faq.rst  index.rst  license.rst  thermovision.rst  transformation.rst  troubleshooting.rst  utils.rst  visualization.rst
docs/source/collection/: core.rst  index.rst  ncu.rst
docs/source/installation/: installation_from_pypi.rst  installation_from_source.rst  runtime_requirements.rst
docs/source/overview/: architecture.rst  core_concepts.rst  quickstart.rst  welcome.rst
docs/source/release_notes/: known_issues.rst  support.rst
examples/: 00_minimal.py  01_compare_throughput.py  02_parameter_sweep.py  03_custom_metrics.py  04_multi_parameter.py  05_subplots.py  06_plot_customization.py  07_triton_minimal.py  README.md  test_examples.py
nsight/: __init__.py  analyze.py  annotation.py  exceptions.py  extraction.py  transformation.py  utils.py  visualization.py
nsight/collection/: core.py  ncu.py
scripts/git-hooks/: pre-commit
tests/: test_annotate.py  test_api_params.py  test_collection.py  test_profiler.py  test_thermovision.py
